used url_for for adding urls

--- a/personal_post_project/templates/about.html
+++ b/personal_post_project/templates/about.html
@@ -8,7 +8,7 @@
     <p>This is a simple blog application.</p>
     <h2>Navigation</h2>
     <ul>
-      <li><a href="{{ url_for('home') }}">Home</a></li>
+      <li><a href="{{ url_for('details') }}">details</a></li>
       <li><a href="{{ url_for('create_post') }}">Create Post</a></li>
     </ul>
   </body>
