--- a/personal_post_project/templates/base.html
+++ b/personal_post_project/templates/base.html
@@ -7,7 +7,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="{{ url_for('home') }}">Home</a></li>
+          <li><a href="{{ url_for('about') }}">about</a></li>
         </ul>
       </nav>
     </header>
